<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_3"
    tools:context=".HomeActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:text="@string/welcome"
        android:background="@color/black"
        android:textColor="@color/red"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:id="@+id/welcomeUser"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:text="@string/name"
        android:layout_below="@+id/welcomeUser"
        android:textColor="@color/red"
        android:textAlignment="center"
        android:textStyle="bold"
        android:background="@color/black"
        android:id="@+id/name"/>

    <Button
        android:id="@+id/btnNewEmergency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_below="@+id/name"
        android:backgroundTint="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="74dp"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:text="@string/new_emergency" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnNewEmergency"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/black"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:text="@string/logout" />


</RelativeLayout>