<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".SMSActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/create_your_message"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="50sp"
        android:textColor="@color/red" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emergencyMessage"
        android:background="@color/red"
        android:textSize="20sp"
        android:lines="15"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_your_emergency_message_here"
        android:textColorHint="@color/black"
        android:inputType="textMultiLine" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/send"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/red"
        android:text="@string/send_emergency_message"
        android:textColor="@color/black"
        android:textSize="20sp" />

</LinearLayout>