<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ChooseEmergencyServiceActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:text="@string/choose_a_service"
        style="@style/TextAppearance.AppCompat.Large"
        android:background="@color/red"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="40sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/img_1"
        android:id="@+id/photo"
        android:layout_below="@+id/textView" />

    <Button
        android:id="@+id/btnPolice"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/photo"
        android:textSize="20sp"
        android:backgroundTint="@color/red"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/police" />

    <Button
        android:id="@+id/btnFire"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:backgroundTint="@color/red"
        android:layout_below="@+id/btnPolice"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/firefighters" />

    <Button
        android:id="@+id/btnMedical"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/btnFire"
        android:backgroundTint="@color/red"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/medical" />

</RelativeLayout>